--- a/src/game.form
+++ b/src/game.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="game">
-  <grid id="27dc6" layout-manager="GridLayoutManager" row-count="6" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="6" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
@@ -8,10 +8,12 @@
     <properties/>
     <border type="none"/>
     <children>
-      <grid id="abc91" layout-manager="GridLayoutManager" row-count="3" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="abc91" binding="board" layout-manager="GridLayoutManager" row-count="3" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="0" column="0" row-span="6" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="6" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <preferred-size width="600" height="750"/>
+          </grid>
         </constraints>
         <properties/>
         <border type="none"/>
@@ -48,7 +50,7 @@
               <text value="Button"/>
             </properties>
           </component>
-          <component id="e1f4c" class="javax.swing.JButton" binding="button5" default-binding="true">
+          <component id="e1f4c" class="javax.swing.JButton" binding="button7">
             <constraints>
               <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -56,15 +58,7 @@
               <text value="Button"/>
             </properties>
           </component>
-          <component id="5db7b" class="javax.swing.JButton" binding="button6" default-binding="true">
-            <constraints>
-              <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="Button"/>
-            </properties>
-          </component>
-          <component id="ca84e" class="javax.swing.JButton" binding="button7" default-binding="true">
+          <component id="ca84e" class="javax.swing.JButton" binding="button5">
             <constraints>
               <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -80,7 +74,7 @@
               <text value="Button"/>
             </properties>
           </component>
-          <component id="5ab7" class="javax.swing.JButton" binding="button9" default-binding="true">
+          <component id="5ab7" class="javax.swing.JButton" binding="button11">
             <constraints>
               <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -88,7 +82,7 @@
               <text value="Button"/>
             </properties>
           </component>
-          <component id="8ec04" class="javax.swing.JButton" binding="button10" default-binding="true">
+          <component id="8ec04" class="javax.swing.JButton" binding="button6">
             <constraints>
               <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -96,7 +90,7 @@
               <text value="Button"/>
             </properties>
           </component>
-          <component id="a3c1b" class="javax.swing.JButton" binding="button11" default-binding="true">
+          <component id="a3c1b" class="javax.swing.JButton" binding="button9">
             <constraints>
               <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -112,25 +106,33 @@
               <text value="Button"/>
             </properties>
           </component>
+          <component id="5db7b" class="javax.swing.JButton" binding="button10">
+            <constraints>
+              <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Button"/>
+            </properties>
+          </component>
         </children>
       </grid>
-      <component id="31f3c" class="javax.swing.JButton" binding="button13" default-binding="true">
+      <component id="31f3c" class="javax.swing.JButton" binding="restartButton" default-binding="true">
         <constraints>
           <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Button"/>
+          <text value="Restart"/>
         </properties>
       </component>
-      <component id="84aac" class="javax.swing.JButton" binding="button14" default-binding="true">
+      <component id="84aac" class="javax.swing.JButton" binding="hintButton" default-binding="true">
         <constraints>
           <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Button"/>
+          <text value="Hint"/>
         </properties>
       </component>
-      <component id="abd1b" class="javax.swing.JLabel">
+      <component id="abd1b" class="javax.swing.JLabel" binding="time">
         <constraints>
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -138,7 +140,7 @@
           <text value="Label"/>
         </properties>
       </component>
-      <component id="b4e14" class="javax.swing.JLabel">
+      <component id="b4e14" class="javax.swing.JLabel" binding="score">
         <constraints>
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -146,7 +148,7 @@
           <text value="Label"/>
         </properties>
       </component>
-      <component id="18a3b" class="javax.swing.JLabel">
+      <component id="18a3b" class="javax.swing.JLabel" binding="remaining">
         <constraints>
           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
