--- a/src/instruction.form
+++ b/src/instruction.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="604" height="400"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -26,6 +26,7 @@
         <properties>
           <font size="22"/>
           <horizontalAlignment value="0"/>
+          <horizontalTextPosition value="0"/>
           <text value="Label"/>
         </properties>
       </component>
